--- a/app/src/main/res/layout/fragment_session_view.xml
+++ b/app/src/main/res/layout/fragment_session_view.xml
@@ -63,7 +63,21 @@
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/sessionAutocorrGraph" />
+
+          <Button
+              android:id="@+id/sendEmail"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              app:layout_constraintBottom_toBottomOf="parent"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintTop_toBottomOf="@+id/autocorrelationAverage"
+              android:text="Send Data"/>
+
      </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
 
      <!--DEBUG data>
      <TextView
