--- a/app/src/main/res/layout/fragment_session_view.xml
+++ b/app/src/main/res/layout/fragment_session_view.xml
@@ -12,7 +12,7 @@
 
           <com.jjoe64.graphview.GraphView
               android:id="@+id/sessionAutocorrGraph"
-              android:layout_width="400dp"
+              android:layout_width="wrap_content"
               android:layout_height="180dp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
@@ -23,7 +23,7 @@
 
           <com.jjoe64.graphview.GraphView
               android:id="@+id/sessionGyroGraph"
-              android:layout_width="400dp"
+              android:layout_width="wrap_content"
               android:layout_height="180dp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +34,7 @@
 
           <com.jjoe64.graphview.GraphView
               android:id="@+id/sessionGraph"
-              android:layout_width="400dp"
+              android:layout_width="wrap_content"
               android:layout_height="180dp"
               android:layout_gravity="top"
               app:layout_constraintBottom_toTopOf="@+id/sessionGyroGraph"
