--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,4 +3,5 @@
     <attr name="bgColor" format="color"/>
     <attr name="textColor" format="color"/>
     <attr name="metaTextColor" format="color"/>
+    <attr name="graphColor" format="color"/>
 </resources>
