--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,12 +11,14 @@
     <style name="LightTheme" parent="AppTheme">
         <item name="textColor">#000000</item>
         <item name="metaTextColor">#606060</item>
+        <item name="graphColor"> #ffffff</item>
         <item name="bgColor">#ffffff</item>
     </style>
 
     <style name="DarkTheme" parent="AppTheme">
         <item name="textColor">#ffffff</item>
         <item name="metaTextColor">#aeaeae</item>
+        <item name="graphColor"> #aeaeae</item>
         <item name="bgColor">#000000</item>
     </style>
 
