Added labels to Home Screen

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -61,4 +61,36 @@
         android:src="@drawable/ic_folder_black_24dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:id="@+id/files"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/filesButton"
+        android:text="Files"
+        android:textSize="28dp"/>
+    <TextView
+        android:id="@+id/App"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/filesButton"
+        android:layout_centerHorizontal="true"
+        android:text="App Info"
+        android:textSize="28dp"/>
+    <TextView
+        android:id="@+id/Sampling"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/trainingButton"
+        android:text="Sampling"
+        android:layout_centerHorizontal="true"
+        android:textSize="28dp"/>
+    <TextView
+        android:id="@+id/User"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/userInfoButton"
+        android:text="@string/UserInfo"
+        android:layout_alignParentEnd="true"
+        android:textSize="28dp"/>
 </RelativeLayout>
