--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -68,6 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@id/filesButton"
         android:text="Files"
+        android:textColor="?attr/textColor"
         android:textSize="28dp"/>
     <TextView
         android:id="@+id/App"
@@ -76,6 +77,7 @@
         android:layout_above="@id/filesButton"
         android:layout_centerHorizontal="true"
         android:text="App Info"
+        android:textColor="?attr/textColor"
         android:textSize="28dp"/>
     <TextView
         android:id="@+id/Sampling"
@@ -84,6 +86,7 @@
         android:layout_above="@id/trainingButton"
         android:text="Sampling"
         android:layout_centerHorizontal="true"
+        android:textColor="?attr/textColor"
         android:textSize="28dp"/>
     <TextView
         android:id="@+id/User"
@@ -92,5 +95,6 @@
         android:layout_above="@id/userInfoButton"
         android:text="@string/UserInfo"
         android:layout_alignParentEnd="true"
+        android:textColor="?attr/textColor"
         android:textSize="28dp"/>
 </RelativeLayout>
