--- a/app/src/main/res/layout/fragment_session_view.xml
+++ b/app/src/main/res/layout/fragment_session_view.xml
@@ -78,7 +78,7 @@
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.498"
               app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintTop_toBottomOf="@+id/autocorrelationAverage" />
+              app:layout_constraintTop_toBottomOf="@+id/stepSymmetry" />
 
      </androidx.constraintlayout.widget.ConstraintLayout>
 
