--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.cauliflower.ready2walk.UI.UserInfoFragment"
@@ -206,8 +207,9 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ButtonLayout"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_below="@id/Buttons">
@@ -221,6 +223,33 @@
         android:text="Change Theme"
         android:layout_below="@id/Line5"
         android:textSize="16sp"/>
+
+
     </LinearLayout>
+    <View
+        android:id="@+id/Line6"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@android:color/darker_gray"
+        android:layout_below="@+id/ButtonLayout"/>
+
+
+    <com.jjoe64.graphview.GraphView
+        android:id="@+id/averageGraph"
+        android:layout_width="wrap_content"
+        android:layout_height="180dp"
+        android:layout_below="@+id/Line6"/>
+    <View
+        android:id="@+id/Line7"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:background="@android:color/darker_gray"
+        android:layout_below="@+id/averageGraph"/>
+
+    <com.jjoe64.graphview.GraphView
+        android:id="@+id/angleGraph"
+        android:layout_width="wrap_content"
+        android:layout_height="180dp"
+        android:layout_below="@+id/Line7"/>
 
 </RelativeLayout>
